# Etc-mono-repo

./: .cursorrules  .gitignore  AGENTS.md  AGGREGATE_SUMMARY.md  BENCHMARK_RESULTS_FINAL.md  CHEAP_MODELS_PLAN.md  CLAUDE.md  CONSOLIDATION_MISTAKE.md  CRITICAL_BACKUP.md  CRON_JOB_STRATEGY.md  CURSOR_AGENTS_ANALYSIS.md  DOCUMENTATION_INDEX.md  EXPERIMENTS_INDEX.md  FINAL_REVIEW.md  GLOBAL_TOKEN_REDUCTION_PLAN.md  HANDOFF_SUMMARY.md  HEARTBEAT.md  HEARTBEAT_OPTIMIZED.md  IMPLEMENTATION_COMPLETE.md  LOADING_STRATEGY.md  LONG_SESSION_COMPACTION.md  MEMORY.md  METALEARNINGS_2026_02_14.md  MOBILE_APP_REVERSE_ENGINEERING.md  MOBILE_SPEECH_APP_README.md  MODEL_FALLBACK_CONFIG.md  MODEL_ROUTING.md  Makefile  PROJECT_REVIEW.md  PROJECT_STATUS.md  PR_220_COMMENT.md  README.md  RESET.md  RESTORE_NOTES.md  REVIEW_SUMMARY.md  Readme.md  SESSION_ISOLATION_RULES.md  SKILLS_USAGE_GUIDE.md  SOCIAL_MEDIA_COPY.md  STACK_CONSISTENCY_AUDIT.md  (+20 more)
.claude/: STATUS.md  dream-state.md  (+9 more)
apps/orbit-pilot/: .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  HUMAN_GUIDE.md  README.md  pyproject.toml
apps/orbit-pilot/claude-skills/: README.md
apps/orbit-pilot/claude-skills/orbit-pilot-operator/: SKILL.md
apps/orbit-pilot/src/orbit_pilot/: __init__.py  __main__.py  _version.py  assets.py  audit.py  browser_assist.py  check_run.py  cli.py  cli_commands.py  cli_io.py  config.py  credentials.py  dedupe.py  graph.py  hook_trigger.py  links.py  manual_guidance.py  manual_pack.py  models.py  orchestrate.py  policy.py  profile_loader.py  prompts.py  registry.py  registry_lint.py  schedule_argv.py  schedule_recurrence.py  schedule_timezone.py  scheduler.py  schemas_cmd.py  tui_app.py  webhook.py
apps/orbit-pilot/src/orbit_pilot/bundled/: __init__.py  launch.sample.yaml  launch.walletradar.sample.yaml  risk.defaults.yaml  seed_platforms.yaml
apps/orbit-pilot/src/orbit_pilot/publishers/: dev.py  github.py  http.py  linkedin.py  medium.py  router.py  x.py
apps/orbit-pilot/src/orbit_pilot/services/: campaigns.py  export_run.py  generation.py  publishing.py  reporting.py  validation.py  work_queue.py
apps/orbit-pilot/tests/: __init__.py  test_audit.py  test_audit_read.py  test_browser_cdp.py  test_browser_playwright_e2e.py  test_check_run.py  test_cli_helpers.py  test_cli_io.py  test_dedupe.py  test_export.py  test_graph.py  test_links.py  test_orchestrate.py  test_orchestrate_generate.py  test_pipeline.py  test_platform_matrix_parity.py  test_policy.py  test_profile_loader.py  test_prompts_cta.py  test_publishers.py  test_publishing_browser.py  test_regenerate.py  test_registry_lint.py  test_schedule_timezone.py  test_scheduler.py  test_schema_validation.py  test_schemas_cmd.py  test_validate_json_cmd.py  test_validation.py  test_validation_browser.py  test_webhook.py  test_work_queue.py
ideas/collab-markdown-spec-studio/desktop/src-tauri/: Cargo.toml  tauri.conf.json
ideas/collab-markdown-spec-studio/desktop/src-tauri/capabilities/: default.json
ideas/collab-markdown-spec-studio/desktop/src-tauri/src/: lib.rs  main.rs
ideas/orbit-pilot/: .gitignore  AGENTS.md  AGENT_HANDOFF.md  ARCHITECTURE_DECISIONS.md  ARCHITECTURE_DIAGRAMS.md  COMPETITOR_ANALYSIS.md  COMPETITOR_MATRIX.md  EXECUTIVE_SUMMARY.md  FINANCIAL_MODEL.md  FIRST_60_MINUTES.md  FRONTEND_VISION.md  GO_NO_GO_SCORECARD.md  PILOT_RUN_CHECKLIST.md  PLATFORM_MATRIX.md  PRD.md  README.md  README_REVIEW_GUIDE.md  RESEARCH_NOTES.md  RISK_REGISTER.md  SAMPLE_OUTPUTS.md  SPEC.md  SYSTEM_PROMPT.md  TASKS.md  USER_FLOWS.md  UX_PRINCIPLES.md  V0_BUILD_PLAN.md  V1_ROADMAP.md  V1_SHIPPED.md  V2_ROADMAP.md  VALIDATION_PLAN.md  WIREFRAMES.md  pyproject.toml
ideas/orbit-pilot/data/: seed_platforms.yaml
ideas/orbit-pilot/examples/: launch.sample.yaml
ideas/orbit-pilot/src/: orbit_pilot_skeleton.py
ideas/orbit-pilot/src/orbit_pilot/: __init__.py  assets.py  audit.py  cli.py  graph.py  manual_guidance.py  manual_pack.py  models.py  prompts.py  registry.py  state.py
ideas/orbit-pilot/src/orbit_pilot/publishers/: __init__.py  devto.py  github.py  http.py  medium.py  requirements.py  router.py  x.py
ideas/orbit-pilot/src/orbit_pilot/services/: __init__.py  campaigns.py  generation.py  publishing.py  reporting.py  validation.py
ideas/orbit-pilot/tests/: test_cli_helpers.py  test_publishers.py
mobile_experiments/Valdi/: .gitignore  AGENTS.md  AGENT_COMPLETION_REPORT.md  BUILD.bazel  BUILD_SUCCESS.md  CORRECTION_SUMMARY.md  DOCUMENTATION.md  HANDOFF.md  NEXT_STEPS.md  README.md  README_AGENT.md  SETUP.md  TASKS.md  UNDERSTANDING.md  WORKSPACE  package-lock.json  package.json
mobile_experiments/Valdi/assets/: .gitkeep
mobile_experiments/Valdi/modules/snapchat_valdi/: BUILD.bazel  tsconfig.json
mobile_experiments/Valdi/src/: App.valdi
mobile_experiments/Valdi/src/components/: HelloWorld.valdi
(+2385 files in other folders)
