[project]
name = "orbit-pilot"
version = "0.1.0"
description = "CLI-first launch distribution operator scaffold"
requires-python = ">=3.11"
dependencies = ["PyYAML>=6.0"]

[project.scripts]
orbit = "orbit_pilot.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
