[package]
name = "specforge-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "specforge_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "specforge-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["shell-sidecar"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
